--- a/cpp4/cpp4.vcxproj
+++ b/cpp4/cpp4.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="cpp4.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cpp4.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
