--- a/cpp2/cpp2.vcxproj
+++ b/cpp2/cpp2.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="cpp2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cpp2.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
