--- a/cpp3/cpp3.vcxproj
+++ b/cpp3/cpp3.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="cpp3.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="cpp3.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
