--- a/cpp6/cpp6.vcxproj.filters
+++ b/cpp6/cpp6.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="cpp6.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="list.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="list.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
