--- a/cpp6/cpp6.vcxproj.filters
+++ b/cpp6/cpp6.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="list.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="dynarr.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="list.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="dynarr.h">
       <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
