--- a/cpp7/cpp7.vcxproj.filters
+++ b/cpp7/cpp7.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="cpp7.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="stack.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="stack.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
