--- a/cpp8/cpp8.vcxproj.filters
+++ b/cpp8/cpp8.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="cpp8.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="bt.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bt.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
