--- a/cpp8/cpp8.vcxproj
+++ b/cpp8/cpp8.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bt.cpp" />
     <ClCompile Include="cpp8.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
